fix contrast

--- a/Assignment10/updatedStyle.css
+++ b/Assignment10/updatedStyle.css
@@ -107,7 +107,7 @@ nav span {
     line-height: 1.7;
     text-transform: uppercase;
     text-decoration: none;
-    color: #454f58;
+    color: #21262b;
 
 }
 
